# Python-Template

./: .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  ci.yml
docs/: ci-cd.md  configuration.md  contributing.md  development.md  docker.md  pre-commit.md  testing.md  uv-guide.md
src/: main.py
src/core/: config.py  logger.py
src/core/cache/: cache_client.py
src/core/database/: session.py
src/core/logger/: __init__.py  app_logger.py
tests/: logger_test.py  main_test.py
tests/unit/: logger_test.py  main_test.py
