[build-system]
    build-backend="hatchling.build"
    requires     =["hatchling"]

[project]
    authors        =[{name="hyunyoun", email="chochyjj@gmail.com"}]
    dependencies   =["pydantic>=2.12.5"]
    description    ="Add your description here"
    name           ="python-template"
    readme         ="README.md"
    requires-python=">=3.13"
    version        ="0.1.0"

[dependency-groups]
    dev=[
        "detect-secrets>=1.5.0",
        "httpx>=0.28.1",
        "mypy>=1.19.1",
        "pip-audit>=2.10.0",
        "pre-commit>=4.5.1",
        "pytest-asyncio>=1.3.0",
        "pytest-cov>=7.0.0",
        "pytest>=9.0.2",
        "ruff>=0.14.10",
    ]

    # --- Tool Settings ---


[tool.uv]
    package=false
    preview=true

[tool.ruff]
    line-length   =120
    target-version="py313"

    [tool.ruff.lint]
        ignore=[]
        select=[
            "A",   # flake8-builtins: Avoid shadowing builtins
            "ARG", # unused-arguments (미사용 인자)
            "B",   # flake8-bugbear: Design problems
            "C4",  # flake8-comprehensions: Better comprehensions
            "D",   # pydocstyle (문서화 규칙)
            "E",   # pycodestyle errors
            "F",   # Pyflakes: Logic errors
            "I",   # isort: Import sorting
            "N",   # pep8-naming: Standard naming conventions
            "PT",  # flake8-pytest-style: Better pytest practices
            "RUF", # Ruff-specific rules
            "S",   # flake8-bandit: Security checks
            "SIM", # flake8-simplify: Code simplification
            "TID", # flake8-tidy-imports (임포트 정돈)
            "UP",  # pyupgrade: Upgrade syntax
        ]

        [tool.ruff.lint.pydocstyle]
            # Google 스타일 또는 NumPy 스타일 중 선택 가능
            convention="google"

        [tool.ruff.lint.per-file-ignores]
            "app/core/config/settings.py"=["S105", "S106"]
            "tests/**/*"                 =["S101", "S105", "S106", "S110"]

        [tool.ruff.lint.isort]
            known-first-party=["app"]

        [tool.ruff.lint.flake8-bugbear]
            extend-immutable-calls=[
                "fastapi.Body",
                "fastapi.Cookie",
                "fastapi.Depends",
                "fastapi.Header",
                "fastapi.Path",
                "fastapi.Query",
                "fastapi.Security",
            ]

    [tool.ruff.format]
        indent-style="space"
        quote-style ="double"

[tool.mypy]
    # 파이썬 버전 설정
    python_version="3.13"
    # 엄격한 타입 체크 활성화
    strict=true
    # 사용 중인 라이브러리(pydantic 등)의 타입 힌트 인식 활성화
    ignore_missing_imports=true
    # 소스 경로 지정
    mypy_path="app"

    [tool.mypy.overrides]
        # 테스트 코드에서는 일부 엄격한 규칙 완화 가능
        allow_untyped_defs=true
        module            ="tests.*"

[tool.pytest.ini_options]
    addopts  ="--ignore=tests/load/ --cov=app --cov-report=term-missing"
    testpaths=["tests"]
    # 비동기 테스트 모드 자동 설정 (Strict 모드 권장)
    asyncio_default_fixture_loop_scope="function"
    asyncio_mode                      ="auto"
